# Voskhod-1

./: .gitignore  CMakeLists.txt  README.md
src/Voskhod/: Core.cpp  Core.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h
src/game/: main.cpp
